// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render bottom slot correctly 1`] = `
<div class="van-empty">
  <div class="van-empty__image">
    <svg viewbox="0 0 160 160">
      <defs>
        <linearGradient
          x1="50%"
          x2="50%"
          y2="100%"
          id="van-empty-5"
        >
          <stop
            stop-color="#F2F3F5"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
          >
          </stop>
        </linearGradient>
        <linearGradient
          x1="95%"
          y1="48%"
          x2="5.5%"
          y2="51%"
          id="van-empty-6"
        >
          <stop
            stop-color="#EAEDF1"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
          >
          </stop>
        </linearGradient>
        <linearGradient
          y1="45%"
          x2="100%"
          y2="54%"
          id="van-empty-7"
        >
          <stop
            stop-color="#EAEDF1"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
          >
          </stop>
        </linearGradient>
      </defs>
      <defs>
        <linearGradient
          id="van-empty-a"
          x1="64%"
          y1="100%"
          x2="64%"
        >
          <stop
            stop-color="#FFF"
            offset="0%"
            stop-opacity="0.5"
          >
          </stop>
          <stop
            stop-color="#F2F3F5"
            offset="100%"
          >
          </stop>
        </linearGradient>
      </defs>
      <g opacity=".8">
        <path
          d="M36 131V53H16v20H2v58h34z"
          fill="url(#van-empty-a)"
        >
        </path>
        <path
          d="M123 15h22v14h9v77h-31V15z"
          fill="url(#van-empty-a)"
        >
        </path>
      </g>
      <defs>
        <linearGradient
          id="van-empty-b"
          x1="64%"
          y1="97%"
          x2="64%"
          y2="0%"
        >
          <stop
            stop-color="#F2F3F5"
            offset="0%"
            stop-opacity="0.3"
          >
          </stop>
          <stop
            stop-color="#F2F3F5"
            offset="100%"
          >
          </stop>
        </linearGradient>
      </defs>
      <g opacity=".8">
        <path
          d="M87 6c3 0 7 3 8 6a8 8 0 1 1-1 16H80a7 7 0 0 1-8-6c0-4 3-7 6-7 0-5 4-9 9-9Z"
          fill="url(#van-empty-b)"
        >
        </path>
        <path
          d="M19 23c2 0 3 1 4 3 2 0 4 2 4 4a4 4 0 0 1-4 3v1h-7v-1l-1 1c-2 0-3-2-3-4 0-1 1-3 3-3 0-2 2-4 4-4Z"
          fill="url(#van-empty-b)"
        >
        </path>
      </g>
      <g
        transform="translate(36 50)"
        fill="none"
      >
        <g transform="translate(8)">
          <rect
            fill="#EBEDF0"
            opacity=".6"
            x="38"
            y="13"
            width="36"
            height="53"
            rx="2"
          >
          </rect>
          <rect
            fill="url(#van-empty-5)"
            width="64"
            height="66"
            rx="2"
          >
          </rect>
          <rect
            fill="#FFF"
            x="6"
            y="6"
            width="52"
            height="55"
            rx="1"
          >
          </rect>
          <g
            transform="translate(15 17)"
            fill="url(#van-empty-6)"
          >
            <rect
              width="34"
              height="6"
              rx="1"
            >
            </rect>
            <path d="M0 14h34v6H0z">
            </path>
            <rect
              y="28"
              width="34"
              height="6"
              rx="1"
            >
            </rect>
          </g>
        </g>
        <rect
          fill="url(#van-empty-7)"
          y="61"
          width="88"
          height="28"
          rx="1"
        >
        </rect>
        <rect
          fill="#F7F8FA"
          x="29"
          y="72"
          width="30"
          height="6"
          rx="1"
        >
        </rect>
      </g>
    </svg>
  </div>
  <div class="van-empty__bottom">
    Custom bottom
  </div>
</div>
`;

exports[`should render description slot correctly 1`] = `
<div class="van-empty">
  <div class="van-empty__image">
    <svg viewbox="0 0 160 160">
      <defs>
        <linearGradient
          x1="50%"
          x2="50%"
          y2="100%"
          id="van-empty-5"
        >
          <stop
            stop-color="#F2F3F5"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
          >
          </stop>
        </linearGradient>
        <linearGradient
          x1="95%"
          y1="48%"
          x2="5.5%"
          y2="51%"
          id="van-empty-6"
        >
          <stop
            stop-color="#EAEDF1"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
          >
          </stop>
        </linearGradient>
        <linearGradient
          y1="45%"
          x2="100%"
          y2="54%"
          id="van-empty-7"
        >
          <stop
            stop-color="#EAEDF1"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
          >
          </stop>
        </linearGradient>
      </defs>
      <defs>
        <linearGradient
          id="van-empty-a"
          x1="64%"
          y1="100%"
          x2="64%"
        >
          <stop
            stop-color="#FFF"
            offset="0%"
            stop-opacity="0.5"
          >
          </stop>
          <stop
            stop-color="#F2F3F5"
            offset="100%"
          >
          </stop>
        </linearGradient>
      </defs>
      <g opacity=".8">
        <path
          d="M36 131V53H16v20H2v58h34z"
          fill="url(#van-empty-a)"
        >
        </path>
        <path
          d="M123 15h22v14h9v77h-31V15z"
          fill="url(#van-empty-a)"
        >
        </path>
      </g>
      <defs>
        <linearGradient
          id="van-empty-b"
          x1="64%"
          y1="97%"
          x2="64%"
          y2="0%"
        >
          <stop
            stop-color="#F2F3F5"
            offset="0%"
            stop-opacity="0.3"
          >
          </stop>
          <stop
            stop-color="#F2F3F5"
            offset="100%"
          >
          </stop>
        </linearGradient>
      </defs>
      <g opacity=".8">
        <path
          d="M87 6c3 0 7 3 8 6a8 8 0 1 1-1 16H80a7 7 0 0 1-8-6c0-4 3-7 6-7 0-5 4-9 9-9Z"
          fill="url(#van-empty-b)"
        >
        </path>
        <path
          d="M19 23c2 0 3 1 4 3 2 0 4 2 4 4a4 4 0 0 1-4 3v1h-7v-1l-1 1c-2 0-3-2-3-4 0-1 1-3 3-3 0-2 2-4 4-4Z"
          fill="url(#van-empty-b)"
        >
        </path>
      </g>
      <g
        transform="translate(36 50)"
        fill="none"
      >
        <g transform="translate(8)">
          <rect
            fill="#EBEDF0"
            opacity=".6"
            x="38"
            y="13"
            width="36"
            height="53"
            rx="2"
          >
          </rect>
          <rect
            fill="url(#van-empty-5)"
            width="64"
            height="66"
            rx="2"
          >
          </rect>
          <rect
            fill="#FFF"
            x="6"
            y="6"
            width="52"
            height="55"
            rx="1"
          >
          </rect>
          <g
            transform="translate(15 17)"
            fill="url(#van-empty-6)"
          >
            <rect
              width="34"
              height="6"
              rx="1"
            >
            </rect>
            <path d="M0 14h34v6H0z">
            </path>
            <rect
              y="28"
              width="34"
              height="6"
              rx="1"
            >
            </rect>
          </g>
        </g>
        <rect
          fill="url(#van-empty-7)"
          y="61"
          width="88"
          height="28"
          rx="1"
        >
        </rect>
        <rect
          fill="#F7F8FA"
          x="29"
          y="72"
          width="30"
          height="6"
          rx="1"
        >
        </rect>
      </g>
    </svg>
  </div>
  <p class="van-empty__description">
    Custom description
  </p>
</div>
`;

exports[`should render image slot correctly 1`] = `
<div class="van-empty">
  <div class="van-empty__image">
    Custom Image
  </div>
</div>
`;

exports[`should render svg when image is network 1`] = `
<div class="van-empty">
  <div class="van-empty__image">
    <svg viewbox="0 0 160 160">
      <defs>
        <linearGradient
          id="van-empty-1"
          x1="64%"
          y1="100%"
          x2="64%"
        >
          <stop
            stop-color="#FFF"
            offset="0%"
            stop-opacity="0.5"
          >
          </stop>
          <stop
            stop-color="#F2F3F5"
            offset="100%"
          >
          </stop>
        </linearGradient>
        <linearGradient
          id="van-empty-2"
          x1="50%"
          x2="50%"
          y2="84%"
        >
          <stop
            stop-color="#EBEDF0"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
            stop-opacity="0"
          >
          </stop>
        </linearGradient>
        <linearGradient
          id="van-empty-3"
          x1="100%"
          x2="100%"
          y2="100%"
        >
          <stop
            stop-color="#EAEDF0"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#DCDEE0"
            offset="100%"
          >
          </stop>
        </linearGradient>
        <radialGradient
          id="van-empty-4"
          cx="50%"
          cy="0%"
          fx="50%"
          fy="0%"
          r="100%"
          gradienttransform="matrix(0 1 -.54 0 .5 -.5)"
        >
          <stop
            stop-color="#EBEDF0"
            offset="0%"
          >
          </stop>
          <stop
            stop-color="#FFF"
            offset="100%"
            stop-opacity="0"
          >
          </stop>
        </radialGradient>
      </defs>
      <g fill="none">
        <defs>
          <linearGradient
            id="van-empty-a"
            x1="64%"
            y1="100%"
            x2="64%"
          >
            <stop
              stop-color="#FFF"
              offset="0%"
              stop-opacity="0.5"
            >
            </stop>
            <stop
              stop-color="#F2F3F5"
              offset="100%"
            >
            </stop>
          </linearGradient>
        </defs>
        <g opacity=".8">
          <path
            d="M36 131V53H16v20H2v58h34z"
            fill="url(#van-empty-a)"
          >
          </path>
          <path
            d="M123 15h22v14h9v77h-31V15z"
            fill="url(#van-empty-a)"
          >
          </path>
        </g>
        <path
          fill="url(#van-empty-4)"
          d="M0 139h160v21H0z"
        >
        </path>
        <path
          d="M80 54a7 7 0 0 1 3 13v27l-2 2h-2a2 2 0 0 1-2-2V67a7 7 0 0 1 3-13z"
          fill="url(#van-empty-2)"
        >
        </path>
        <g
          opacity=".6"
          stroke-linecap="round"
          stroke-width="7"
        >
          <path
            d="M64 47a19 19 0 0 0-5 13c0 5 2 10 5 13"
            stroke="url(#van-empty-3)"
          >
          </path>
          <path
            d="M53 36a34 34 0 0 0 0 48"
            stroke="url(#van-empty-3)"
          >
          </path>
          <path
            d="M95 73a19 19 0 0 0 6-13c0-5-2-9-6-13"
            stroke="url(#van-empty-3)"
          >
          </path>
          <path
            d="M106 84a34 34 0 0 0 0-48"
            stroke="url(#van-empty-3)"
          >
          </path>
        </g>
        <g transform="translate(31 105)">
          <rect
            fill="#EBEDF0"
            width="98"
            height="34"
            rx="2"
          >
          </rect>
          <rect
            fill="#FFF"
            x="9"
            y="8"
            width="80"
            height="18"
            rx="1.1"
          >
          </rect>
          <rect
            fill="#EBEDF0"
            x="15"
            y="12"
            width="18"
            height="6"
            rx="1.1"
          >
          </rect>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
